force-app/main/default/objects/HAM_Event_Attendee_Group__c/HAM_Event_Attendee_Group__c.object-meta.xml
<CustomObject>
    <label>Event Attendee Group</label>
    <nameField>
        <label>Event Attendee Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Attendee Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>