force-app/main/default/objects/HAM_Event_Attendee_Group__c/fields/CventEvents_Event__c.field-meta.xml
<CustomField>
    <fullName>CventEvents_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this attendee group to its parent Cvent event record.</description>
    <inlineHelpText>The Cvent event this attendee group belongs to.</inlineHelpText>
    <label>Cvent Event</label>
    <referenceTo>CventEvents__Event__c</referenceTo>
    <relationshipLabel>Event Attendee Groups</relationshipLabel>
    <relationshipName>Event_Attendee_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>