force-app/main/default/objects/HAM_Event_Attendee_Group__c/fields/HAM_Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>HAM_Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account responsible for billing for this attendee group, carried over from Blackthorn.</description>
    <inlineHelpText>The account to bill for this group&apos;s registrations.</inlineHelpText>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Attendee Groups</relationshipLabel>
    <relationshipName>Event_Attendee_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>