force-app/main/default/objects/HAM_Event_Attendee_Group__c/fields/HAM_Bill_To_Lead__c.field-meta.xml
<CustomField>
    <fullName>HAM_Bill_To_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Lead record responsible for billing on this attendee group, used when the billing contact is a Lead rather than a Contact.</description>
    <inlineHelpText>The lead responsible for billing on this attendee group.</inlineHelpText>
    <label>Bill To Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>HAM Event Attendee Groups</relationshipLabel>
    <relationshipName>HAM_Event_Attendee_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>