force-app/main/default/objects/HAM_Event_Attendee_Group__c/fields/HAM_BT_Attendee_Group__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Attendee_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the originating Blackthorn attendee group record. Provides a navigable back-link for validation and cross-reference.</description>
    <inlineHelpText>Click to navigate to the original Blackthorn attendee group record. Null indicates this record was not migrated from Blackthorn.</inlineHelpText>
    <label>BT Attendee Group</label>
    <referenceTo>conference360__Attendee_Group__c</referenceTo>
    <relationshipLabel>Event Attendee Groups</relationshipLabel>
    <relationshipName>Event_Attendee_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>