force-app/main/default/objects/HAM_Event_Attendee_Group__c/fields/HAM_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Group_Name__c</fullName>
    <description>The name of this attendee group carried over from Blackthorn.</description>
    <inlineHelpText>The group name as it appeared in Blackthorn.</inlineHelpText>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>